--- a/assets/templates/page02.html
+++ b/assets/templates/page02.html
@@ -15,27 +15,27 @@
 </div>
 <div class="text-section vote-section">
     <div class="col-sm-15">
-        <svg>
+        <svg class="vote-item">
             <use xlink:href="#rate" width="150"></use>
         </svg>
     </div>
     <div class="col-sm-15">
-        <svg>
+        <svg class="vote-item">
             <use xlink:href="#rate" width="150"></use>
         </svg>
     </div>
     <div class="col-sm-15">
-        <svg>
+        <svg class="vote-item">
             <use xlink:href="#rate" width="150"></use>
         </svg>
     </div>
     <div class="col-sm-15">
-        <svg>
+        <svg class="vote-item">
             <use xlink:href="#rate" width="150"></use>
         </svg>
     </div>
     <div class="col-sm-15">
-        <svg>
+        <svg class="vote-item">
             <use xlink:href="#rate" width="150"></use>
         </svg>
     </div>
