--- a/assets/stylesheets/fonts.css
+++ b/assets/stylesheets/fonts.css
@@ -12,3 +12,8 @@
   font-family: Oswald-Regular;
   src: url(/assets/fonts/Oswald-Regular.woff);
 }
+
+@font-face {
+  font-family: Oswald-Bold;
+  src: url(/assets/fonts/Oswald-Bold.woff);
+}
