--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -281,6 +281,7 @@ svg {
 .progress-label-number {
     text-align: left;
     left: 13px;
+    width: 20px;
 }
 
 .progress-label img.icon-active {
