--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -139,6 +139,11 @@ h2 {
     /*position: absolute;*/
     /*top: 50%; left: 0; bottom: 0; right: 0;*/
 }
+#page01, #page02, #page03, #page04, #page05 {
+    line-height: 2rem;
+    opacity: 0;
+    /*transition: all .5s ease-in-out;*/
+}
 .main-section p {
     font-family: SourceSans-Regular;
     font-size: 1.5rem;
