--- a/assets/stylesheets/media.css
+++ b/assets/stylesheets/media.css
@@ -40,6 +40,13 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .main-section-wrapper {
+        height: 80vh;
+    }
+
+}
+
 
 @media screen and (max-width: 650px) {
     .img-container {
