adjust progress meter height

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -284,7 +284,7 @@ svg {
     position: absolute;
     right: 60px;
     top: 100px;
-    height: 80%;
+    height: calc(92% - 112px);
     width: 7px;
 }
 
