--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -111,7 +111,7 @@ body {
     border-radius: 6px;
 }
 .progress-bar-main {
-    width: 20%;
+    width: 1.6%;
     height: 100%;
     float: left;
     background: linear-gradient(to right, white , #98D82A);
@@ -150,7 +150,7 @@ h2 {
     /*position: absolute;*/
     /*top: 50%; left: 0; bottom: 0; right: 0;*/
 }
-#p1, #p2, #p3, #p4, #p5 {
+.question-page {
     line-height: 2rem;
     opacity: 0;
     /*transition: all .5s ease-in-out;*/
@@ -417,7 +417,7 @@ svg {
     text-decoration: underline;
 }
 
-#page06 {
+#p64 {
     top: 0;
 }
 
