--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -203,6 +203,9 @@ h2 {
     font-family: SourceSans-Regular;
     font-size: 1.1rem;
 }
+.vote-section.translate span {
+    transform: translateX(-40%);
+}
 svg {
     width: 80px;
     height: 80px;
