--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,9 +1,11 @@
 .hidden {
     visibility: hidden;
 }
+
 .display-none {
     display: none;
 }
+
 .no-padding {
     padding: 0;
 }
@@ -30,6 +32,7 @@
     top: 24px;
     left: 40px;
 }
+
 .es-header .home-link a {
     color: #4D4D4F;
     font-family: SourceSans-Regular;
@@ -45,7 +48,25 @@ body {
     background-color: #313131;
 }
 
+
 /********************** progress-bar *******************/
+
+.section-nav {
+    display: none;
+}
+
+.menu-small {
+    display: none;
+    position: fixed;
+    right: -600px;
+    top: 68px;
+    /*width: 66.6%;*/
+    height: 100%;
+    padding: 0;
+    background-color: #fff;
+    width: 200px;
+    z-index: 25;
+}
 
 .progress-bar-container {
     display: none;
@@ -54,10 +75,12 @@ body {
     height: 34px;
     margin: 0 auto;
 }
+
 .progress-question {
     width: 100%;
     height: 34px;
 }
+
 .progress-question p {
     padding: 10px;
     text-align: center;
@@ -65,24 +88,30 @@ body {
     font-family: SourceSans-Regular;
     font-size: 0.9rem;
 }
-.progress-nav-previous, .progress-nav-next {
+
+.progress-nav-previous,
+.progress-nav-next {
     float: left;
     width: calc(50% - 108px)
 }
+
 .progress-nav-previous img {
     float: left;
     margin-top: -8px;
 }
+
 .progress-nav-next p {
     display: inline;
     padding-left: 10px;
 }
+
 .progress-nav-next img {
     float: right;
     margin-top: -4px;
 }
 
-.progress-nav-previous p, .progress-nav-next p {
+.progress-nav-previous p,
+.progress-nav-next p {
     padding-top: 2px;
     color: #A8A8A9 !important;
     text-align: center;
@@ -90,19 +119,25 @@ body {
     font-family: Oswald-Regular;
     font-size: 0.8rem;
 }
-.progress-nav-previous a, .progress-nav-next a {
+
+.progress-nav-previous a,
+.progress-nav-next a {
     color: #A8A8A9 !important;
 }
+
 #link-previous {
     pointer-events: none;
     cursor: default;
 }
-#link-previous p, #link-previous img{
+
+#link-previous p,
+#link-previous img {
     opacity: 0;
     -webkit-transition: opacity 0.4s ease-in-out;
     -moz-transition: opacity 0.4s ease-in-out;
     transition: opacity 0.4s ease-in-out;
 }
+
 .progress-bar-background {
     width: 216px;
     height: 14px;
@@ -110,32 +145,41 @@ body {
     background-color: #4D4D4F;
     border-radius: 6px;
 }
+
 .progress-bar-main {
     width: 1.6%;
     height: 100%;
     float: left;
-    background: linear-gradient(to right, white , #98D82A);
+    background: linear-gradient(to right, white, #98D82A);
     border-radius: 6px;
     transition: width .4s ease-in-out;
 }
 
+
 /******************* end-progress-bar ******************/
+
 
 /********************* main-section *******************/
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-transform: uppercase;
 }
+
 h1 {
     font-family: Oswald-Regular;
     font-size: 2.8rem;
 }
+
 h2 {
     font-family: Oswald-Regular;
     font-size: 2.1rem;
     line-height: 2.1rem;
 }
+
 .main-section-wrapper {
+    position: relative;
     width: 100%;
     height: 70vh;
     display: flex;
@@ -143,6 +187,7 @@ h2 {
     justify-content: center;
     align-items: center;
 }
+
 .main-section {
     width: 50%;
     /*height: 100%;*/
@@ -150,51 +195,62 @@ h2 {
     /*position: absolute;*/
     /*top: 50%; left: 0; bottom: 0; right: 0;*/
 }
+
 .question-page {
     line-height: 2rem;
     opacity: 0;
     /*transition: all .5s ease-in-out;*/
 }
+
 .main-section p {
     font-family: SourceSans-Regular;
     font-size: 1.3rem;
     color: #BCBCBC;
 }
+
 .main-section p.text-secondary {
     font-size: 1rem;
     padding: 5px 15px;
 }
+
 .main-section p.text-question {
     font-size: 1rem;
     text-align: justify;
 }
+
 .horizontal-line {
     width: 100%;
     height: 1px;
     display: inline-block;
     border-bottom: 1px solid #727272;
 }
+
 .text-colored {
     color: #98D82A !important;
 }
+
 .text-white {
     color: white !important;
 }
+
 .text-gray {
     color: #5D5D5D !important;
 }
+
 .text-section {
     width: 100%;
     padding: 8px;
     float: left;
     text-align: center;
 }
+
 .vote-section {
     width: 110%;
     height: 100px;
     margin: 0 -20px;
     padding: 10px 0;
 }
+
 .vote-section span {
     position: absolute;
     top: 80px;
@@ -203,14 +259,17 @@ h2 {
     font-family: SourceSans-Regular;
     font-size: 1.1rem;
 }
+
 .vote-section.translate span {
     transform: translateX(-40%);
 }
+
 svg {
     width: 80px;
     height: 80px;
     fill: #A8A8A9;
 }
+
 .vote-item:hover svg {
     fill: #98D82A !important;
 }
@@ -262,12 +321,15 @@ svg {
     border: none;
     border-radius: 20px;
 }
+
 .button-choose:hover {
     background-color: #4D4D4F;
 }
+
 .button-choose:focus {
     background-color: #98D82A;
     color: #4D4D4F;
+    outline: none;
 }
 
 .error-section {
@@ -275,26 +337,28 @@ svg {
     padding: 8px;
     float: left;
     text-align: center;
-    transform: scale(0,1);
+    transform: scale(0, 1);
     opacity: 0;
     transition: all .2s ease-in-out;
 }
 
 .error-section-open {
     opacity: 1;
-    transform: scale(1,1);
+    transform: scale(1, 1);
 }
 
 .error-section p {
     font-size: 1rem;
     color: #F86363;
 }
+
 .error-section .horizontal-line {
     border-bottom: 1px solid #F86363;
 }
 
 
 /******************* end-main-section *****************/
+
 
 /******************* progress-meter ******************/
 
@@ -310,6 +374,7 @@ svg {
     width: 100%;
     height: 1px;
 }
+
 .top-line {
     width: 100%;
     border-style: none;
@@ -363,11 +428,13 @@ svg {
     font-size: 0.92rem;
 }
 
-.progress-label p.start-finish-label, .start-label p.start-finish-label {
+.progress-label p.start-finish-label,
+.start-label p.start-finish-label {
     color: white;
     font-size: 0.9rem;
     font-family: SourceSans-Bold;
 }
+
 
 /*.control-class {
     color: red !important;
@@ -377,6 +444,7 @@ svg {
     color: white;
     cursor: pointer;
 }
+
 
 /*.progress-label p.step-complete.check-symbol {
     font-size: 1.2rem;
@@ -401,6 +469,7 @@ svg {
     border-left-style: none;
     border-top-style: none;
 }
+
 .right-line {
     float: left;
     width: 50%;
@@ -409,6 +478,7 @@ svg {
     border-style: none;
     border-bottom: 1px solid #727272;
 }
+
 
 /******************* end-progress-meter ******************/
 
@@ -434,63 +504,70 @@ svg {
     top: 0;
 }
 
+
 /**************** loading animation **********************/
 
-#loading{
-	background-color: #59631e;
-	height: 100%;
-	width: 100%;
-	position: fixed;
-	z-index: 1;
-	margin-top: 0px;
-	top: 0px;
+#loading {
+    background-color: #59631e;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    margin-top: 0px;
+    top: 0px;
 }
-#loading-center{
-	width: 100%;
-	height: 100%;
-	position: relative;
-	}
+
+#loading-center {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
 #loading-center-absolute {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	height: 100px;
-	width: 50px;
-	margin-top: -50px;
-	margin-left: -25px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    height: 100px;
+    width: 50px;
+    margin-top: -50px;
+    margin-left: -25px;
 }
-.object{
-	width: 50px;
-	height: 8px;
-	margin-bottom:15px;
-	background-color: #FFF;
-	-webkit-animation: animate 0.8s infinite;
-	animation: animate 0.8s infinite;
-	}
-#object_two { 
-	-webkit-animation-delay: 0.2s; 
+
+.object {
+    width: 50px;
+    height: 8px;
+    margin-bottom: 15px;
+    background-color: #FFF;
+    -webkit-animation: animate 0.8s infinite;
+    animation: animate 0.8s infinite;
+}
+
+#object_two {
+    -webkit-animation-delay: 0.2s;
     animation-delay: 0.2s;
-	}
-#object_four {	
-	-webkit-animation-delay: 0.2s; 
-    animation-delay: 0.2s; 
-	}
+}
+
+#object_four {
+    -webkit-animation-delay: 0.2s;
+    animation-delay: 0.2s;
+}
+
 @-webkit-keyframes animate {
- 
-  50% {
-	-ms-transform: translate(50%,0); 
-   	-webkit-transform: translate(50%,0); 
-    transform: translate(50%,0); 
-	  }
+    50% {
+        -ms-transform: translate(50%, 0);
+        -webkit-transform: translate(50%, 0);
+        transform: translate(50%, 0);
+    }
 }
 
 @keyframes animate {
-  50% {
-	-ms-transform: translate(50%,0); 
-   	-webkit-transform: translate(50%,0); 
-    transform: translate(50%,0); 
-	  }
+    50% {
+        -ms-transform: translate(50%, 0);
+        -webkit-transform: translate(50%, 0);
+        transform: translate(50%, 0);
+    }
 }
+
 
 /**************** report **********************/
 
@@ -548,11 +625,13 @@ svg {
     top: 17px;
 }
 
+
 /**************** modal **********************/
 
 .modal-content {
     border-radius: 0;
 }
+
 .modal-body {
     padding: 0;
     /*height: 584px;*/
@@ -564,9 +643,11 @@ svg {
     height: 584px;
     float: left;
 }
+
 .form-group input {
     font-family: SourceSans-Regular;
 }
+
 .form-container {
     padding: 30px;
     background-color: white;
@@ -583,7 +664,8 @@ svg {
     padding-bottom: 15px;
 }
 
-.form-container label, .input-group {
+.form-container label,
+.input-group {
     font-family: SourceSans-Regular;
     padding-top: 15px;
     padding-bottom: 5px;
@@ -668,48 +750,64 @@ svg {
     width: 100%;
 }
 
-#activity::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #f96464;
+#activity::-webkit-input-placeholder {
+    /* WebKit, Blink, Edge */
+    color: #f96464;
 }
-#activity:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #f96464;
-   opacity:  1;
+
+#activity:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: #f96464;
+    opacity: 1;
 }
-#activity::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #f96464;
-   opacity:  1;
+
+#activity::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: #f96464;
+    opacity: 1;
 }
-#activity:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #f96464;
+
+#activity:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #f96464;
 }
 
 input[type=radio].css-checkbox {
-							position:absolute; z-index:-1000; left:-1000px; overflow: hidden; clip: rect(0 0 0 0); height:1px; width:1px; margin:-1px; padding:0; border:0;
-						}
+    position: absolute;
+    z-index: -1000;
+    left: -1000px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    width: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+}
 
-						input[type=radio].css-checkbox + label.css-label {
-							padding-left:37px;
-                            padding-top: 0;
-							height:28px; 
-							display:inline-block;
-							line-height:28px;
-							background-repeat:no-repeat;
-							background-position: 0 0;
-							font-size:0.8rem;
-							vertical-align:middle;
-							cursor:pointer;
+input[type=radio].css-checkbox + label.css-label {
+    padding-left: 37px;
+    padding-top: 0;
+    height: 28px;
+    display: inline-block;
+    line-height: 28px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    font-size: 0.8rem;
+    vertical-align: middle;
+    cursor: pointer;
+}
 
-						}
+input[type=radio].css-checkbox:checked + label.css-label {
+    background-position: 0 -28px;
+}
 
-						input[type=radio].css-checkbox:checked + label.css-label {
-							background-position: 0 -28px;
-						}
-						label.css-label {
-				background-image:url(/assets/images/css-checkbox.png);
-				-webkit-touch-callout: none;
-				-webkit-user-select: none;
-				-khtml-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-			}
+label.css-label {
+    background-image: url(/assets/images/css-checkbox.png);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
