new hamburger menu, more media queries for iphone

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -54,6 +54,16 @@ body {
 .section-nav {
     display: none;
 }
+.menu-back {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    z-index: 19;
+}
 
 .menu-small {
     display: none;
@@ -255,6 +265,7 @@ h2 {
     position: absolute;
     top: 80px;
     left: 50%;
+    /*left: 54%;*/
     color: #A8A8A9;
     font-family: SourceSans-Regular;
     font-size: 1.1rem;
